# monte-carlo

./: pyproject.toml
notes/: monte-carlo-02.ipynb  monte-carlo-12.html  monte-carlo-12.ipynb  monte-carlo-14.html  monte-carlo-14.ipynb  nonte-carlo-01.ipynb  nonte-carlo-02.ipynb
