[tool.poetry]
package-mode = false
name = "monte-carlo"
version = "0.1.0"
description = ""
authors = ["morisoba <morisoba@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
